--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -3829,6 +3829,355 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- **Data Integration with Pandas:** *From Easy to Advanced*\n",
+    "    - Data integration is the process of combining data from multiple sources into a unified format. \n",
+    "    - In pandas, this is done using techniques like:\n",
+    "       - concatenation, \n",
+    "       - merging, and \n",
+    "       - joining datasets."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 1️⃣ **Beginner Level**: *Concatenation* ```(pd.concat())```\n",
+    "- *This method stacks dataframes either vertically (rows) or horizontally (columns).*\n",
+    "\n",
+    "- **Example 1: Vertical Concatenation (Appending Rows)**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   ID     Name\n",
+      "0   1    Alice\n",
+      "1   2      Bob\n",
+      "2   3  Charlie\n",
+      "3   4    David\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.DataFrame({'ID': [1, 2], 'Name': ['Alice', 'Bob']})\n",
+    "df2 = pd.DataFrame({'ID': [3, 4], 'Name': ['Charlie', 'David']})\n",
+    "\n",
+    "df_combined = pd.concat([df1, df2], ignore_index=True)\n",
+    "print(df_combined)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "actor_data = pd.DataFrame({\n",
+    "    \"actor_id\": [1, 1, 1, 1, 1, 2, 2],\n",
+    "    \"director_id\": [1, 1, 1, 2, 2, 1, 1],\n",
+    "    \"timestamp\": [0, 1, 2, 3, 4, 5, 6]\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def actors_and_directors(actor_director: pd.DataFrame) -> pd.DataFrame:\n",
+    "    data_1 = actor_director.groupby(['actor_id','director_id'],as_index=False).size()\n",
+    "    data_1 = data_1[data_1['size']>=3]\n",
+    "    data_1 = pd.DataFrame(data_1, columns=['actor_id','director_id'])\n",
+    "    return data_1    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>actor_id</th>\n",
+       "      <th>director_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   actor_id  director_id\n",
+       "0         1            1"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "actors_and_directors(actor_data)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table: Employees\n",
+    "\n",
+    "+---------------+---------+\n",
+    "| Column Name   | Type    |\n",
+    "+---------------+---------+\n",
+    "| id            | int     |\n",
+    "| name          | varchar |\n",
+    "+---------------+---------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table contains the id and the name of an employee in a company.\n",
+    " \n",
+    "\n",
+    "Table: EmployeeUNI\n",
+    "\n",
+    "+---------------+---------+\n",
+    "| Column Name   | Type    |\n",
+    "+---------------+---------+\n",
+    "| id            | int     |\n",
+    "| unique_id     | int     |\n",
+    "+---------------+---------+\n",
+    "(id, unique_id) is the primary key (combination of columns with unique values) for this table.\n",
+    "Each row of this table contains the id and the corresponding unique id of an employee in the company.\n",
+    " \n",
+    "\n",
+    "Write a solution to show the unique ID of each user, If a user does not have a unique ID replace just show null.\n",
+    "\n",
+    "Return the result table in any order."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "employees_data = pd.DataFrame({\n",
+    "    \"id\": [1, 7, 11, 90, 3],\n",
+    "    \"name\": [\"Alice\", \"Bob\", \"Meir\", \"Winston\", \"Jonathan\"]\n",
+    "})\n",
+    "employee_uni_data = pd.DataFrame({\n",
+    "    \"id\": [3, 11, 90],\n",
+    "    \"unique_id\": [1, 2, 3]\n",
+    "})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class unique_emp():\n",
+    "    def identify_unique_emp_id(self, employee:pd.DataFrame, employee_uni:pd.DataFrame) -> pd.DataFrame:\n",
+    "        merge_employee = pd.merge(employee,employee_uni, on='id',how='left')\n",
+    "        result = pd.DataFrame(merge_employee, columns=['name','unique_id'])\n",
+    "        return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>unique_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Meir</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Winston</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jonathan</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name  unique_id\n",
+       "0     Alice        NaN\n",
+       "1       Bob        NaN\n",
+       "2      Meir        2.0\n",
+       "3   Winston        3.0\n",
+       "4  Jonathan        1.0"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_emp().identify_unique_emp_id(employee=employees_data, employee_uni=employee_uni_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "      <th>unique_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Alice</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Bob</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Meir</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Winston</td>\n",
+       "      <td>3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Jonathan</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       name  unique_id\n",
+       "0     Alice        NaN\n",
+       "1       Bob        NaN\n",
+       "2      Meir        2.0\n",
+       "3   Winston        3.0\n",
+       "4  Jonathan        1.0"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_un"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
