--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -4101,7 +4101,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "students_data = pd.DataFrame({\n",
+    "    \"student_id\": [1, 2, 13, 6],\n",
+    "    \"student_name\": [\"Alice\", \"Bob\", \"John\", \"Alex\"]\n",
+    "})\n",
+    "subjects_data = pd.DataFrame({\n",
+    "    \"subject_name\": [\"Math\", \"Physics\", \"Programming\"]\n",
+    "})\n",
+    "examinations_data = pd.DataFrame({\n",
+    "    \"student_id\": [1, 1, 1, 2, 1, 1, 13, 13, 13, 2, 1],\n",
+    "    \"subject_name\": [\"Math\", \"Physics\", \"Programming\", \"Programming\", \"Physics\", \n",
+    "                     \"Math\", \"Math\", \"Programming\", \"Physics\", \"Math\", \"Math\"]\n",
+    "})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -4125,56 +4145,339 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>name</th>\n",
-       "      <th>unique_id</th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>subject_name</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>1</td>\n",
        "      <td>Alice</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>Math</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Bob</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Physics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Meir</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Programming</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Winston</td>\n",
-       "      <td>3.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Programming</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>Jonathan</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Physics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Programming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Physics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Math</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       name  unique_id\n",
-       "0     Alice        NaN\n",
-       "1       Bob        NaN\n",
-       "2      Meir        2.0\n",
-       "3   Winston        3.0\n",
-       "4  Jonathan        1.0"
+       "    student_id student_name subject_name\n",
+       "0            1        Alice         Math\n",
+       "1            1        Alice      Physics\n",
+       "2            1        Alice  Programming\n",
+       "3            2          Bob  Programming\n",
+       "4            1        Alice      Physics\n",
+       "5            1        Alice         Math\n",
+       "6           13         John         Math\n",
+       "7           13         John  Programming\n",
+       "8           13         John      Physics\n",
+       "9            2          Bob         Math\n",
+       "10           1        Alice         Math"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_un"
+    "merg_1 = pd.merge(students_data, examinations_data,on='student_id',how='right')\n",
+    "merg_2 = pd.merge(merg_1,subjects_data,on=['subject_name'], how ='left')\n",
+    "merg_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>subject_name</th>\n",
+       "      <th>attended_exam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Programming</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Programming</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Programming</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   student_id student_name subject_name  attended_exam\n",
+       "0           1        Alice         Math              3\n",
+       "1           1        Alice      Physics              2\n",
+       "2           1        Alice  Programming              1\n",
+       "3           2          Bob         Math              1\n",
+       "4           2          Bob  Programming              1\n",
+       "5          13         John         Math              1\n",
+       "6          13         John      Physics              1\n",
+       "7          13         John  Programming              1"
+      ]
+     },
+     "execution_count": 68,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merg_1 = pd.merge(students_data, examinations_data,on='student_id',how='outer')\n",
+    "merg_2 = pd.merge(merg_1,subjects_data,on=['subject_name'], how ='left')\n",
+    "data_out_put = merg_2.groupby(['student_id','student_name','subject_name'],as_index=False).size()\n",
+    "data_out_put.rename(columns={'size':'attended_exam'},inplace=True)\n",
+    "result = pd.DataFrame(data_out_put,columns=[\"student_id\",'student_name','subject_name','attended_exam'])\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>student_id</th>\n",
+       "      <th>student_name</th>\n",
+       "      <th>subject_name</th>\n",
+       "      <th>attended_exam</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Programming</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
+       "      <td>Programming</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Math</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Physics</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Programming</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   student_id student_name subject_name  attended_exam\n",
+       "0           1        Alice         Math              3\n",
+       "1           1        Alice      Physics              2\n",
+       "2           1        Alice  Programming              1\n",
+       "3           2          Bob         Math              1\n",
+       "4           2          Bob  Programming              1\n",
+       "5          13         John         Math              1\n",
+       "6          13         John      Physics              1\n",
+       "7          13         John  Programming              1"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   },
   {
