--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -4121,7 +4121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -4171,15 +4171,15 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Bob</td>\n",
-       "      <td>Programming</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Alice</td>\n",
+       "      <td>Physics</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1</td>\n",
        "      <td>Alice</td>\n",
-       "      <td>Physics</td>\n",
+       "      <td>Math</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -4189,33 +4189,39 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>13</td>\n",
-       "      <td>John</td>\n",
-       "      <td>Math</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>13</td>\n",
-       "      <td>John</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Bob</td>\n",
        "      <td>Programming</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>13</td>\n",
-       "      <td>John</td>\n",
-       "      <td>Physics</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
+       "      <th>7</th>\n",
        "      <td>2</td>\n",
        "      <td>Bob</td>\n",
        "      <td>Math</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Alice</td>\n",
+       "      <th>8</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
        "      <td>Math</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Programming</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>13</td>\n",
+       "      <td>John</td>\n",
+       "      <td>Physics</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Alex</td>\n",
+       "      <td>NaN</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -4226,30 +4232,31 @@
        "0            1        Alice         Math\n",
        "1            1        Alice      Physics\n",
        "2            1        Alice  Programming\n",
-       "3            2          Bob  Programming\n",
-       "4            1        Alice      Physics\n",
+       "3            1        Alice      Physics\n",
+       "4            1        Alice         Math\n",
        "5            1        Alice         Math\n",
-       "6           13         John         Math\n",
-       "7           13         John  Programming\n",
-       "8           13         John      Physics\n",
-       "9            2          Bob         Math\n",
-       "10           1        Alice         Math"
+       "6            2          Bob  Programming\n",
+       "7            2          Bob         Math\n",
+       "8           13         John         Math\n",
+       "9           13         John  Programming\n",
+       "10          13         John      Physics\n",
+       "11           6         Alex          NaN"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merg_1 = pd.merge(students_data, examinations_data,on='student_id',how='right')\n",
-    "merg_2 = pd.merge(merg_1,subjects_data,on=['subject_name'], how ='left')\n",
-    "merg_2"
+    "merg_1 = pd.merge(students_data, examinations_data,on='student_id',how='left')\n",
+    "\n",
+    "merg_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
@@ -4352,14 +4359,15 @@
        "7          13         John  Programming              1"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merg_1 = pd.merge(students_data, examinations_data,on='student_id',how='outer')\n",
-    "merg_2 = pd.merge(merg_1,subjects_data,on=['subject_name'], how ='left')\n",
+    "merg_1 = pd.merge(students_data, examinations_data,on='student_id',how='left')\n",
+    "merg_2 = pd.merge(merg_1,subjects_data,on=['subject_name'], how ='outer')\n",
+    "merg_2\n",
     "data_out_put = merg_2.groupby(['student_id','student_name','subject_name'],as_index=False).size()\n",
     "data_out_put.rename(columns={'size':'attended_exam'},inplace=True)\n",
     "result = pd.DataFrame(data_out_put,columns=[\"student_id\",'student_name','subject_name','attended_exam'])\n",
@@ -4484,8 +4492,86 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    student_id subject_name  attended_exams\n",
+      "0            1         Math               3\n",
+      "1            1      Physics               2\n",
+      "2            1  Programming               1\n",
+      "3            2         Math               1\n",
+      "4            2      Physics               0\n",
+      "5            2  Programming               1\n",
+      "6            6         Math               0\n",
+      "7            6      Physics               0\n",
+      "8            6  Programming               0\n",
+      "9           13         Math               1\n",
+      "10          13      Physics               1\n",
+      "11          13  Programming               1\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Creating Students DataFrame\n",
+    "students_data = {\n",
+    "    \"student_id\": [1, 2, 13, 6],\n",
+    "    \"student_name\": [\"Alice\", \"Bob\", \"John\", \"Alex\"]\n",
+    "}\n",
+    "students_df = pd.DataFrame(students_data)\n",
+    "\n",
+    "# Creating Subjects DataFrame\n",
+    "subjects_data = {\n",
+    "    \"subject_name\": [\"Math\", \"Physics\", \"Programming\"]\n",
+    "}\n",
+    "subjects_df = pd.DataFrame(subjects_data)\n",
+    "\n",
+    "# Creating Examinations DataFrame\n",
+    "examinations_data = {\n",
+    "    \"student_id\": [1, 1, 1, 2, 1, 1, 13, 13, 13, 2, 1],\n",
+    "    \"subject_name\": [\"Math\", \"Physics\", \"Programming\", \"Programming\", \"Physics\", \n",
+    "                     \"Math\", \"Math\", \"Programming\", \"Physics\", \"Math\", \"Math\"]\n",
+    "}\n",
+    "examinations_df = pd.DataFrame(examinations_data)\n",
+    "\n",
+    "# Step 1: Perform a CROSS JOIN to get all possible (student_id, subject_name) pairs\n",
+    "student_subjects = students_df[['student_id']].merge(subjects_df, how=\"cross\")\n",
+    "\n",
+    "# Step 2: Count occurrences in the Examinations table\n",
+    "exam_counts = examinations_df.groupby([\"student_id\", \"subject_name\"]).size().reset_index(name=\"attended_exams\")\n",
+    "\n",
+    "# Step 3: Merge to include all student-subject pairs and fill missing values with 0\n",
+    "result = student_subjects.merge(exam_counts, on=[\"student_id\", \"subject_name\"], how=\"left\").fillna(0)\n",
+    "\n",
+    "# Step 4: Convert attended_exams to integer type\n",
+    "result[\"attended_exams\"] = result[\"attended_exams\"].fillna(0).astype(int)\n",
+    "\n",
+    "# Step 5: Sort the result by student_id and subject_name\n",
+    "result = result.sort_values([\"student_id\", \"subject_name\"]).reset_index(drop=True)\n",
+    "\n",
+    "# Display the result\n",
+    "print(result)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "def students_and_examinations(students: pd.DataFrame, subjects: pd.DataFrame, examinations: pd.DataFrame) -> pd.DataFrame:\n",
+    "    student_subjects = students[['student_id',\"student_name\"]].merge(subjects, how=\"cross\")\n",
+    "    exam_counts = examinations.groupby([\"student_id\", \"subject_name\"]).size().reset_index(name=\"attended_exams\")\n",
+    "    result = student_subjects.merge(exam_counts, on=[\"student_id\" ,\"subject_name\"], how=\"left\")\n",
+    "    result[\"attended_exams\"] = result[\"attended_exams\"].fillna(0).astype(int)\n",
+    "    result = result.sort_values([\"student_id\", \"subject_name\"]).reset_index(drop=True)\n",
+    "    return result"
+   ]
   }
  ],
  "metadata": {
