--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -4572,6 +4572,93 @@
     "    result = result.sort_values([\"student_id\", \"subject_name\"]).reset_index(drop=True)\n",
     "    return result"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def min_operations(blocks: str, k: int) -> int:\n",
+    "    n = len(blocks)\n",
+    "    \n",
+    "    # Initial count of 'B' in the first window\n",
+    "    black_count = sum(1 for i in range(k) if blocks[i] == 'B')\n",
+    "    \n",
+    "    # Max 'B' count found in any k-length window\n",
+    "    max_black = black_count\n",
+    "\n",
+    "    # Sliding window approach\n",
+    "    for i in range(k, n):\n",
+    "        # Remove the leftmost character of the previous window\n",
+    "        if blocks[i - k] == 'B':\n",
+    "            black_count -= 1\n",
+    "        # Add the new character of the current window\n",
+    "        if blocks[i] == 'B':\n",
+    "            black_count += 1\n",
+    "        \n",
+    "        # Update max_black count found\n",
+    "        max_black = max(max_black, black_count)\n",
+    "\n",
+    "    # Minimum changes needed = number of 'W' in the best k-segment\n",
+    "    return k - max_black\n",
+    "\n",
+    "# Example Usage\n",
+    "print(min_operations(\"WBBWWBBWBW\", 3))  # Output: 0\n",
+    "print(min_operations(\"WBWBBBW\", 3))     # Output: 0\n",
+    "print(min_operations(\"WWWW\", 2))        # Output: 2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0\n",
+      "2\n",
+      "0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def min_operations(blocks: str, k: int) -> int:\n",
+    "    n = len(blocks)\n",
+    "    black_count = sum(1 for i in range(k) if blocks[i] == 'B')\n",
+    "    max_black = black_count\n",
+    "    for i in range(k, n):\n",
+    "        if blocks[i - k] == 'B':\n",
+    "            black_count -= 1\n",
+    "        if blocks[i] == 'B':\n",
+    "            black_count += 1\n",
+    "        max_black = max(max_black, black_count)\n",
+    "    return k - max_black\n",
+    "\n",
+    "# Example Usage\n",
+    "print(min_operations(\"WBBWWBBWBW\", 3))  # Output: 0\n",
+    "print(min_operations(\"WBWBBBW\", 3))     # Output: 0\n",
+    "print(min_operations(\"WWWW\", 2))        # Output: 2\n",
+    "print(min_operations(\"WBWBBBW\",2))\n"
+   ]
   }
  ],
  "metadata": {
