--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -4659,6 +4659,65 @@
     "print(min_operations(\"WWWW\", 2))        # Output: 2\n",
     "print(min_operations(\"WBWBBBW\",2))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class solution():\n",
+    "    def count_alternating_groups(self, colors, k):\n",
+    "        n = len(colors)\n",
+    "        count = 0\n",
+    "        \n",
+    "        def is_alternating(start):\n",
+    "            for i in range(k - 1):\n",
+    "                if colors[(start + i) % n] == colors[(start + i + 1) % n]:\n",
+    "                    return False\n",
+    "            return True\n",
+    "\n",
+    "        for i in range(n):\n",
+    "            if is_alternating(i):\n",
+    "                count += 1\n",
+    "\n",
+    "        return count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example usage:\n",
+    "colors = [0,1,0,1,0]\n",
+    "k = 3\n",
+    "solution().count_alternating_groups(colors, k) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
