--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -4667,7 +4667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4710,6 +4710,135 @@
     "colors = [0,1,0,1,0]\n",
     "k = 3\n",
     "solution().count_alternating_groups(colors, k) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Optimized approach for the same problem**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class sol():\n",
+    "    def count_alternating_groups(self,colors, k):\n",
+    "        n = len(colors)\n",
+    "        count = 0\n",
+    "        \n",
+    "        # Step 1: Compute alternating lengths\n",
+    "        alt_lengths = [1] * n\n",
+    "        for i in range(1, n):\n",
+    "            if colors[i] != colors[i - 1]:\n",
+    "                alt_lengths[i] = alt_lengths[i - 1] + 1\n",
+    "\n",
+    "        # Step 2: Check valid groups in a circular way\n",
+    "        for i in range(n):\n",
+    "            if alt_lengths[i] >= k:  # Only check if there is a long enough alternating sequence\n",
+    "                count += 1\n",
+    "        \n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "31623"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "colors = [0,1] * 15812 + [0]  # Large alternating sequence of length 31623\n",
+    "k = 3\n",
+    "sol().count_alternating_groups(colors, k)  # Optimized to run in O(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def numberOfAlternatingGroups(self, colors, k):\n",
+    "        \"\"\"\n",
+    "        :type colors: List[int]\n",
+    "        :type k: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        n = len(colors)\n",
+    "        if k > n:\n",
+    "            return 0  # If k is larger than n, no valid groups exist.\n",
+    "\n",
+    "        # Step 1: Compute the alternating segment lengths\n",
+    "        alt_lengths = [1] * n\n",
+    "        for i in range(1, n):\n",
+    "            if colors[i] != colors[i - 1]:\n",
+    "                alt_lengths[i] = alt_lengths[i - 1] + 1\n",
+    "\n",
+    "        # Step 2: Count valid alternating groups in the circular array\n",
+    "        count = 0\n",
+    "        for i in range(n):\n",
+    "            if alt_lengths[i] >= k:  # Only check if there is a long enough alternating sequence\n",
+    "                count += 1\n",
+    "\n",
+    "        return count\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def numberOfAlternatingGroups(self, colors: List[int], k: int) -> int:\n",
+    "        colors.extend(colors[:(k-1)])  \n",
+    "        count = 0\n",
+    "        left = 0\n",
+    "\n",
+    "        for right in range(len(colors)):\n",
+    "            if right > 0 and colors[right] == colors[right - 1]:\n",
+    "                left = right  \n",
+    "            \n",
+    "            if right - left + 1 >= k:\n",
+    "                count += 1  \n",
+    "        \n",
+    "        return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68378"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Solution().numberOfAlternatingGroups(colors=colors,k=k)"
    ]
   },
   {
