--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -4842,6 +4842,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a circle of red and blue tiles. You are given an array of integers colors and an integer k. The color of tile i is represented by colors[i]:\n",
+    "\n",
+    "colors[i] == 0 means that tile i is red.\n",
+    "colors[i] == 1 means that tile i is blue.\n",
+    "An alternating group is every k contiguous tiles in the circle with alternating colors (each tile in the group except the first and last one has a different color from its left and right tiles).\n",
+    "\n",
+    "Return the number of alternating groups.\n",
+    "\n",
+    "Note that since colors represents a circle, the first and the last tiles are considered to be next to each other."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution(object):\n",
+    "    def numberOfAlternatingGroups(self, colors, k):\n",
+    "        \"\"\"\n",
+    "        :type colors: List[int]\n",
+    "        :type k: int\n",
+    "        :rtype: int\n",
+    "        \"\"\"\n",
+    "        colors.extend(colors[:(k-1)])\n",
+    "        left = 0\n",
+    "        count = 0\n",
+    "        \n",
+    "        for right in range(len(colors)):\n",
+    "            if right > 0 and colors[right] == colors[right - 1]:\n",
+    "                left = right  \n",
+    "            \n",
+    "            if right - left + 1 >= k:\n",
+    "                count += 1  \n",
+    "        \n",
+    "        return count"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
