--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -4885,7 +4885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4902,23 +4902,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 34,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  name  id_x       dept  id_y\n",
+      "0   AA     1      sales   101\n",
+      "1   BB     2  marketing   102\n",
+      "2   CC     3    finance   103\n",
+      "3   DD     4  managment   104\n",
+      "4   EE     5      store   105\n"
+     ]
+    }
+   ],
    "source": [
-    "merg_staff = pd.merge(employee,department,left_on='id', right_on = 'id', how='inner',suffixes=['_emp','_dept'])"
+    "merged_df = pd.merge(employee, department, on='dept', how='inner')\n",
+    "\n",
+    "print(merged_df)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "merged_df = pd.concat([employee,department], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -4945,26 +4962,65 @@
        "      <th>name</th>\n",
        "      <th>id</th>\n",
        "      <th>dept</th>\n",
+       "      <th>id</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>AA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>sales</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>BB</td>\n",
+       "      <td>2</td>\n",
+       "      <td>marketing</td>\n",
+       "      <td>102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CC</td>\n",
+       "      <td>3</td>\n",
+       "      <td>finance</td>\n",
+       "      <td>103</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DD</td>\n",
+       "      <td>4</td>\n",
+       "      <td>managment</td>\n",
+       "      <td>104</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EE</td>\n",
+       "      <td>5</td>\n",
+       "      <td>store</td>\n",
+       "      <td>105</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [name, id, dept]\n",
-       "Index: []"
+       "  name  id       dept   id\n",
+       "0   AA   1      sales  101\n",
+       "1   BB   2  marketing  102\n",
+       "2   CC   3    finance  103\n",
+       "3   DD   4  managment  104\n",
+       "4   EE   5      store  105"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merg_staff"
+    "merged_df"
    ]
   },
   {
@@ -4972,6 +5028,11 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
