--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -5025,10 +5025,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    id   name department managerId\n",
+      "0  101   John          A      <NA>\n",
+      "1  102    Dan          A       101\n",
+      "2  103  James          A       101\n",
+      "3  104    Amy          A       101\n",
+      "4  105   Anne          A       101\n",
+      "5  106    Ron          B       101\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# Creating the Employee DataFrame\n",
+    "employee = pd.DataFrame({\n",
+    "    'id': [101, 102, 103, 104, 105, 106],\n",
+    "    'name': ['John', 'Dan', 'James', 'Amy', 'Anne', 'Ron'],\n",
+    "    'department': ['A', 'A', 'A', 'A', 'A', 'B'],\n",
+    "    'managerId': [pd.NA, 101, 101, 101, 101, 101]  # Using None for NULL values\n",
+    "})\n",
+    "\n",
+    "# Display the DataFrame\n",
+    "print(employee)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Table: Employee    ***Medium level challenge***\n",
+    "\n",
+    "+-------------+---------+\n",
+    "| Column Name | Type    |\n",
+    "+-------------+---------+\n",
+    "| id          | int     |\n",
+    "| name        | varchar |\n",
+    "| department  | varchar |\n",
+    "| managerId   | int     |\n",
+    "+-------------+---------+\n",
+    "id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table indicates the name of an employee, their department, and the id of their manager.\n",
+    "If managerId is null, then the employee does not have a manager.\n",
+    "No employee will be the manager of themself.\n",
+    " \n",
+    "\n",
+    "Write a solution to find managers with at least five direct reports.\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\n",
+    "The result format is in the following example.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: \n",
+    "Employee table:\n",
+    "+-----+-------+------------+-----------+\n",
+    "| id  | name  | department | managerId |\n",
+    "+-----+-------+------------+-----------+\n",
+    "| 101 | John  | A          | null      |\n",
+    "| 102 | Dan   | A          | 101       |\n",
+    "| 103 | James | A          | 101       |\n",
+    "| 104 | Amy   | A          | 101       |\n",
+    "| 105 | Anne  | A          | 101       |\n",
+    "| 106 | Ron   | B          | 101       |\n",
+    "+-----+-------+------------+-----------+\n",
+    "Output: \n",
+    "+------+\n",
+    "| name |\n",
+    "+------+\n",
+    "| John |\n",
+    "+------+"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class sol():\n",
+    "    def manager_name(self, employee): \n",
+    "        report_counts = employee[employee['managerId'].notnull()]['managerId'].value_counts()\n",
+    "        managers_with_5_or_more_reports = report_counts[report_counts >= 5].index\n",
+    "        managers_names = employee[employee['id'].isin(managers_with_5_or_more_reports)]['name']\n",
+    "        return pd.DataFrame(managers_names)       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>John</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   name\n",
+       "0  John"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sol().manager_name(employee=employee)"
+   ]
   },
   {
    "cell_type": "markdown",
