--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -5176,7 +5176,145 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Table: SalesPerson\n",
+    "\n",
+    "+-----------------+---------+\n",
+    "| Column Name     | Type    |\n",
+    "+-----------------+---------+\n",
+    "| sales_id        | int     |\n",
+    "| name            | varchar |\n",
+    "| salary          | int     |\n",
+    "| commission_rate | int     |\n",
+    "| hire_date       | date    |\n",
+    "+-----------------+---------+\n",
+    "sales_id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table indicates the name and the ID of a salesperson alongside their salary, commission rate, and hire date.\n",
+    " \n",
+    "\n",
+    "Table: Company\n",
+    "\n",
+    "+-------------+---------+\n",
+    "| Column Name | Type    |\n",
+    "+-------------+---------+\n",
+    "| com_id      | int     |\n",
+    "| name        | varchar |\n",
+    "| city        | varchar |\n",
+    "+-------------+---------+\n",
+    "com_id is the primary key (column with unique values) for this table.\n",
+    "Each row of this table indicates the name and the ID of a company and the city in which the company is located.\n",
+    " \n",
+    "\n",
+    "Table: Orders\n",
+    "\n",
+    "+-------------+------+\n",
+    "| Column Name | Type |\n",
+    "+-------------+------+\n",
+    "| order_id    | int  |\n",
+    "| order_date  | date |\n",
+    "| com_id      | int  |\n",
+    "| sales_id    | int  |\n",
+    "| amount      | int  |\n",
+    "+-------------+------+\n",
+    "order_id is the primary key (column with unique values) for this table.\n",
+    "com_id is a foreign key (reference column) to com_id from the Company table.\n",
+    "sales_id is a foreign key (reference column) to sales_id from the SalesPerson table.\n",
+    "Each row of this table contains information about one order. This includes the ID of the company, the ID of the salesperson, the date of the order, and the amount paid.\n",
+    " \n",
+    "\n",
+    "Write a solution to find the names of all the salespersons who did not have any orders related to the company with the name \"RED\".\n",
+    "\n",
+    "Return the result table in any order.\n",
+    "\n",
+    "The result format is in the following example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(   sales_id  name  salary  commission_rate   hire_date\n",
+       " 0         1  John  100000                6    4/1/2006\n",
+       " 1         2   Amy   12000                5    5/1/2010\n",
+       " 2         3  Mark   65000               12  12/25/2008\n",
+       " 3         4   Pam   25000               25    1/1/2005\n",
+       " 4         5  Alex    5000               10    2/3/2007,\n",
+       "    com_id    name      city\n",
+       " 0       1     RED    Boston\n",
+       " 1       2  ORANGE  New York\n",
+       " 2       3  YELLOW    Boston\n",
+       " 3       4   GREEN    Austin,\n",
+       "    order_id order_date  com_id  sales_id  amount\n",
+       " 0         1   1/1/2014       3         4   10000\n",
+       " 1         2   2/1/2014       4         5    5000\n",
+       " 2         3   3/1/2014       1         1   50000\n",
+       " 3         4   4/1/2014       1         4   25000)"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# SalesPerson DataFrame\n",
+    "SalesPerson = pd.DataFrame({\n",
+    "    'sales_id': [1, 2, 3, 4, 5],\n",
+    "    'name': ['John', 'Amy', 'Mark', 'Pam', 'Alex'],\n",
+    "    'salary': [100000, 12000, 65000, 25000, 5000],\n",
+    "    'commission_rate': [6, 5, 12, 25, 10],\n",
+    "    'hire_date': ['4/1/2006', '5/1/2010', '12/25/2008', '1/1/2005', '2/3/2007']\n",
+    "})\n",
+    "\n",
+    "# Company DataFrame\n",
+    "Company = pd.DataFrame({\n",
+    "    'com_id': [1, 2, 3, 4],\n",
+    "    'name': ['RED', 'ORANGE', 'YELLOW', 'GREEN'],\n",
+    "    'city': ['Boston', 'New York', 'Boston', 'Austin']\n",
+    "})\n",
+    "\n",
+    "# Orders DataFrame\n",
+    "Orders = pd.DataFrame({\n",
+    "    'order_id': [1, 2, 3, 4],\n",
+    "    'order_date': ['1/1/2014', '2/1/2014', '3/1/2014', '4/1/2014'],\n",
+    "    'com_id': [3, 4, 1, 1],\n",
+    "    'sales_id': [4, 5, 1, 4],\n",
+    "    'amount': [10000, 5000, 50000, 25000]\n",
+    "})\n",
+    "\n",
+    "# Displaying the DataFrames\n",
+    "SalesPerson, Company, Orders\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   name\n",
+      "1   Amy\n",
+      "2  Mark\n",
+      "4  Alex\n"
+     ]
+    }
+   ],
+   "source": [
+    "red_orders = Orders.merge(Company[Company['name'] == 'RED'], on='com_id', how='inner')\n",
+    "sales_ids_with_red_orders = red_orders['sales_id'].unique()\n",
+    "salesperson_without_red_orders = SalesPerson[~SalesPerson['sales_id'].isin(sales_ids_with_red_orders)]\n",
+    "result = salesperson_without_red_orders[['name']]\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
