--- a/notebooks/python_challenges.ipynb
+++ b/notebooks/python_challenges.ipynb
@@ -5315,6 +5315,102 @@
     "result = salesperson_without_red_orders[['name']]\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You are given a string word and a non-negative integer k.\n",
+    "\n",
+    "Return the total number of substrings of word that contain every vowel ('a', 'e', 'i', 'o', and 'u') at least once and exactly k consonants."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Solution:\n",
+    "    def _isVowel(self, c: str) -> bool:\n",
+    "        return c == \"a\" or c == \"e\" or c == \"i\" or c == \"o\" or c == \"u\"\n",
+    "\n",
+    "    def countOfSubstrings(self, word: str, k: int) -> int:\n",
+    "        num_valid_substrings = 0\n",
+    "        start = end = 0\n",
+    "        vowel_count = {}  \n",
+    "        consonant_count = 0 \n",
+    "        next_consonant = [0] * len(\n",
+    "            word\n",
+    "        )  \n",
+    "        next_consonant_index = len(word)\n",
+    "\n",
+    "        for i in range(len(word) - 1, -1, -1):\n",
+    "            next_consonant[i] = next_consonant_index\n",
+    "            if not self._isVowel(word[i]):\n",
+    "                next_consonant_index = i\n",
+    "\n",
+    "        while end < len(word):\n",
+    "            new_letter = word[end]\n",
+    "            if self._isVowel(new_letter):\n",
+    "                vowel_count[new_letter] = vowel_count.get(new_letter, 0) + 1\n",
+    "            else:\n",
+    "                consonant_count += 1\n",
+    "\n",
+    "            while (\n",
+    "                consonant_count > k\n",
+    "            ):  \n",
+    "                start_letter = word[start]\n",
+    "                if self._isVowel(start_letter):\n",
+    "                    vowel_count[start_letter] -= 1\n",
+    "                    if vowel_count[start_letter] == 0:\n",
+    "                        del vowel_count[start_letter]\n",
+    "                else:\n",
+    "                    consonant_count -= 1\n",
+    "                start += 1\n",
+    "\n",
+    "            while (\n",
+    "                start < len(word)\n",
+    "                and len(vowel_count) == 5\n",
+    "                and consonant_count == k\n",
+    "            ):  \n",
+    "                num_valid_substrings += next_consonant[end] - end\n",
+    "                start_letter = word[start]\n",
+    "                if self._isVowel(start_letter):\n",
+    "                    vowel_count[start_letter] -= 1\n",
+    "                    if vowel_count[start_letter] == 0:\n",
+    "                        del vowel_count[start_letter]\n",
+    "                else:\n",
+    "                    consonant_count -= 1\n",
+    "                start += 1\n",
+    "\n",
+    "            end += 1\n",
+    "\n",
+    "        return num_valid_substrings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
